Changes towards version 0.3:
- Fix Druuge transactions to not elevate crew costs baselessly (bug #235),
  from ghakko
- Fixed glitches and NULL Stamp draw attempt in menu code (bug #26) -Mika
- Absence of voice files is now automatically detected (bug #309) -Mika
- Fixed Commander Hayes mouth movement before radioactives are given
  (bug #343) -Mika
- Fix glitches in slylandro probe animation (bugs #398, #399), from Paxtez
- Confirmation dialog box for exiting the game is now menu-based
- Commander Hayes explains his predicament before you get the option to 
  rescue, closes #366, from Nic
- Gestalt mode accelerates continuously as long as some key is held; 
  should resolve to PC-style input wrt bug #381 - Michael
- Fixed some more false key cancels, addressing 378 again - Michael
- Added "gestalt mode" for acceleration cancels; fixes #381 - Michael
- Fixed some "false key cancels" in the input system, addressing bugs 
  #378 and #379 -Michael
- Completely reworked the input system
- Added PC version outtakes, from chmmravatar
- Fix crash in PlayStream when whole file is prebuffered and its not
  speech (bug #259) -Mika
- Fix endian problem in colormap transform code (bug #137) -Mika
- Fix minor glitch in planet coarse scan (bug #238), from chmmravatar
- Wav loader is now endian safe (bug #165) -Mika
- Dialogue patch for Melnorme, fixing bug #335
- Two dialogue spots where visit count could run away patched; fixes bug 
  #333, from Stas Sergeev
- EventHandler checks CurStarDescPtr before dereferencing it (bug #347)
- Oscilloscope/mini-map now has borders (bug #307 part 4) -Mika
- Flashing rects are no longer constrained to even-numbered pixels on the
  y axis; fixes bug #255, from Nic
- Fixed minor glitches in main window borders (bug #307 parts 1,2,3) -Mika
- There's now space before and after : in coordinates (bug #307 part 6),
  from Paxtez
- Star coordinates no longer shimmy (bug #331), from chmmravatar