@@ -1,4 +1,5 @@
 Changes towards version 0.3:
+- Fixed Fwiffo join_us_refusals initialization (bug #405) -Mika
 - Fix Druuge transactions to not elevate crew costs baselessly (bug #235),
   from ghakko
 - Fixed glitches and NULL Stamp draw attempt in menu code (bug #26) -Mika
